--- a/_posts/2023-03-01-OSI-Model.markdown
+++ b/_posts/2023-03-01-OSI-Model.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "OSI Model"
 date:   2023-03-01 08:29:00 -0500
-categories: Hello World
+categories: Cybersecurity Fundamentals
 ---
 If you, like me, have trouble remembering and keeping straight all seven levels of the OSI model, I would recommend trying the TryHackMe OSI model room. I think it is one of the most clear and succinct explanations of the model I've seen going through my studies. Also, there is a fun little mini game at the end to help you remember!
 
