--- a/_posts/2023-03-01-OSI-Model.markdown
+++ b/_posts/2023-03-01-OSI-Model.markdown
@@ -4,7 +4,11 @@ title:  "OSI Model"
 date:   2023-03-01 08:29:00 -0500
 categories: Cybersecurity Fundamentals
 ---
-If you, like me, have trouble remembering and keeping straight all seven levels of the OSI model, I would recommend trying the TryHackMe OSI model room. (It may be premum, but you can access the video on youtube here: https://www.youtube.com/watch?v=hWIktHvNjeM). I think it is one of the most clear and succinct explanations of the model I've seen going through my studies. Also, there is a fun little mini game at the end to help you remember!
+If you, like me, have trouble remembering and keeping straight all seven levels of the OSI model, I would recommend trying the TryHackMe OSI model room. 
+
+(It may be premium, but you can access the video on YouTube here: https://www.youtube.com/watch?v=hWIktHvNjeM). 
+
+I think it is one of the most clear and succinct explanations of the model I've seen going through my studies. Also, there is a fun little mini game at the end to help you remember!
 
 Can you beat my high score of 24 seconds?
 https://lnkd.in/gizW86e9
@@ -27,7 +31,7 @@ If we look at the example of an email client, the application layer would consis
 
 6. Presentation
 
-The main purpose of this layer is to act as a translator between data coming up form layer 5 and the application layer. The presentation layer is where standardization starts to take place so that data sent between differnt softwares are handled correctly on both.
+The main purpose of this layer is to act as a translator between data coming up form layer 5 and the application layer. The presentation layer is where standardization starts to take place so that data sent between different software are handled correctly on both.
 
 Back to our email example, the presentation layer is what allows me to email someone from Gmail to Outlook and have the contents of the message display the same way.
 
@@ -39,12 +43,12 @@ Here, the data within our email message will be broken down into packets. This i
 
 4. Transport
 
-The transport layer does exactly what it's named. It transports packets from one device to another. This layer will can use two differnt protocols to send the data:
+The transport layer does exactly what it's named. It transports packets from one device to another. This layer will can use two different protocols to send the data:
 
     - TCP
     - UDP
 
-TCP or Transmission Control Protocol is designed to guarntee the accuracy of the sent data, is capable of synchronizing the two devices to prevent each of them from being flooded with data, and performs multiple processes to ensure reliability. Unfortunately, this does make TCP considerably slower than UDP which can be a problem because the slow connection can bottleneck the devices because TCP reserves the connection for the entire tranmission time.
+TCP or Transmission Control Protocol is designed to guarantee the accuracy of the sent data, is capable of synchronizing the two devices to prevent each of them from being flooded with data, and performs multiple processes to ensure reliability. Unfortunately, this does make TCP considerably slower than UDP which can be a problem because the slow connection can bottleneck the devices because TCP reserves the connection for the entire transmission time.
 
 UDP or User Datagram Protocol is must faster than TCP, leaves the application layer or user software to decide if there is any control over how quickly the packets are sent, and does not reserve a continuous connection on a device as TCP does. Unfortunately, UDP does not care if the data is received and this can result in a poor user experience if the connection is unstable.
 
@@ -52,7 +56,7 @@ Typically, emails would be sent using TCP because the entire message needs to ar
 
 3. Network
 
-The network layer is where routing and reassembly of the data takes place. Routing is a process the determines the most "optimal" path for the data to travel on, and can be done using differnt protocols which determine what constitues the "optimal" path. A couple of these paths include OSFP or Open Shortest Path First and RIP or Routing Information Protocol.
+The network layer is where routing and reassembly of the data takes place. Routing is a process the determines the most "optimal" path for the data to travel on, and can be done using different protocols which determine what constitutes the "optimal" path. A couple of these paths include OSFP or Open Shortest Path First and RIP or Routing Information Protocol.
 
 At this point our email data is going to act much the same as any other kind of data, and what routing protocol is used will have more to do with the system itself and less to do with the data type.
 
@@ -62,7 +66,7 @@ This layer's job is to present the data in a format suitable for transmission. P
 
 1. Physical
 
-Lastly, the physical layer is probably the simplist to understand. This layer consists of the physical components used to connect devices together such as switches, routers, hubs, and the cables between them. When considering the internet of things (IoT) this could also include lights, valves, door locks, or any number of physical things.
+Lastly, the physical layer is probably the simplest to understand. This layer consists of the physical components used to connect devices together such as switches, routers, hubs, and the cables between them. When considering the internet of things (IoT) this could also include lights, valves, door locks, or any number of physical things.
 
 P.S. I know seven is a lot, but we've got this!
 
